Bug 314259 - Start Desktop Sharing overlay button is broken
Summary: Start Desktop Sharing overlay button is broken
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-02-01 17:21 UTC by Martin Klapetek
Modified: 2013-07-16 16:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2013-02-01 17:21:04 UTC
We've consolidated all the tube roles under ContactTubesRole and it returns QStringList now, meaning it cannot change the index for that role anymore as it does not return bool.
Comment 1 David Edmundson 2013-03-23 01:31:45 UTC
I would be happy with simply removing this.

We are hoping to gain more tubes, we can't show them all in the full delegate.
If you do do that, I want all the relevant code removed. Not left in a disabled state.
Comment 2 Martin Klapetek 2013-03-24 17:43:19 UTC
Happy to remove this.
Comment 3 Martin Klapetek 2013-04-11 15:29:31 UTC
Git commit 699dd98bdb736a7d38cc4449766038a644507108 by Martin Klapetek.
Committed on 11/04/2013 at 17:29.
Pushed by mklapetek into branch 'master'.

Remove 'Share desktop' overlay button

It got broken with porting to new models in 0.6, plus we don't want to
have button for each possible tube.

Reviewed-by: David Edmundson
FIXED-IN: 0.7

M  +0    -8    contact-list-widget.cpp
M  +1    -13   contact-overlays.cpp
M  +0    -10   contact-overlays.h

http://commits.kde.org/telepathy-contact-list/699dd98bdb736a7d38cc4449766038a644507108