Remove 'Share desktop' overlay button

It got broken with porting to new models in 0.6, plus we don't want to
have button for each possible tube.

Reviewed-by: David Edmundson
BUG: 314259
FIXED-IN: 0.7